Bug 33621 - Sum function in formula bar in Calc makes results under the formated cells
Summary: Sum function in formula bar in Calc makes results under the formated cells
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: x86 (IA32) All
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:3.4
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-27 13:27 UTC by Łukasz
Modified: 2011-03-22 10:43 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Image shows bug in details (93.33 KB, image/jpeg)
2011-01-27 13:27 UTC, Łukasz
Details
The file itself (9.30 KB, application/vnd.oasis.opendocument.spreadsheet)
2011-01-27 13:41 UTC, Łukasz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Łukasz 2011-01-27 13:27:08 UTC
Created attachment 42611 [details]
Image shows bug in details

It is about the Sum function on Formula Bar. I have a "xls" file with formated cells (0,05 pt style). When I select the columns and try to make a sum of all selected values using Sum button as shortcut, Calc makes the sum under the formated cells. I know it's hard to explain. To show you what it is all about, I'm sending sceen from the file. Even when I converted it to "ods", the problem still exists.

Steps to Reproduce:

Make a file with various numbers and format cells. Then select one column and try to make a sum of it using Sum button on Formula Bar.


Build & Platform:

libreoffice-3.2.99.2 (3.3-beta2) on Windows
Comment 1 Jorendc 2011-01-27 13:34:27 UTC
Can't reproduce in Mac OS X, LibreOffice 3.3 final.
Is it possible to attach the document?
Comment 2 Łukasz 2011-01-27 13:41:08 UTC
Created attachment 42612 [details]
The file itself
Comment 3 Jorendc 2011-01-27 13:45:45 UTC
Reproduced with attached file. (Mac OS X, LibreOffice 3.3).
Comment 4 Cor Nouws 2011-01-27 13:55:14 UTC
confrim the behaviour in LibO330 on Linux.
Thanks for submitting the issue. Łukasz.
Comment 5 Kohei Yoshida 2011-03-21 19:18:40 UTC
Ah, I know why this is.

Remove the borders from rows 13:14 and try the sum again.  It should work as expected.
Comment 6 Kohei Yoshida 2011-03-21 19:19:39 UTC
Believe or not, this is related to Bug 33671.  I'll take care of this for 3.4.
Comment 7 Kohei Yoshida 2011-03-22 10:43:53 UTC
Fixed on master for 3.4.