Let's check for borders only when calculating printable pages.

The original change was introduced to allow printing of sheets that
only has cell borders without any data cells.  But, the change was
not put in the right scope, and ended up affecting all kinds of
run-time behaviors. (fdo#33621, fdo#33671)

Also fixed some uninitialized data numbers.